--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -2,19 +2,45 @@
     <string name="app_name">TestForAnger</string>
 
     <string-array name="string_questions">
-        <item>Временами я не могу справиться с желанием причинить вред другим.</item>
-        <item>Иногда сплетничаю о людях, которых не люблю.</item>
-        <item>Я легко раздражаюсь, но быстро успокаиваюсь.</item>
-        <item>Если меня не попросят по-хорошему, я не выполню. </item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item> Если я разозлюсь, то могу ударить кого-нибудь. </item>
+        <item>Я никогда не раздражась настолько, чтобы кидаться предметами.</item>
+        <item>Я легко раздражаюсь, но быстро успокаиваюсь. </item>
+        <item>Если меня не попросят по-хорошему, я не выполню просьбу. </item>
+        <item>Мне кажется, что судьба ко мне несправедлива.</item>
+        <item>Я знаю, что люди говорят обо мне за спиной. </item>
+        <item>Я не могу удержаться от спора, если люди не согласны со мной. </item>
+        <item>Если мне случалось обмануть кого-нибудь, я испытывал(а) мучительные угрызения совести. </item>
+        <item>Мне кажется, что я не способен ударить человека. </item>
+        <item> Когда я раздражаюсь, то хлопаю дверьми. </item>
+        <item> Иногда люди раздражают меня просто своим присутствием. </item>
+        <item>Если мне не нравится установленное правило, мне хочется его нарушить. </item>
+        <item>Иногда меня гложет зависть, хотя я этого не показываю. </item>
+        <item>Я думаю, что многие люди не любят меня. </item>
+        <item>Я требую, чтобы люди уважали мои права. </item>
+        <item>Иногда мне на ум приходят мысли, которых я стыжусь. </item>
+        <item>Я знаю людей, которые способны довести меня до драки. </item>
+        <item>Иногда я выражаю гнев тем, что стучу кулаком по столу. </item>
+        <item>Я часто чувствую себя как пороховая бочка, готовая взорваться. </item>
+        <item>Если кто-то корчит из себя начальника, я всегда поступаю ему наперекор. </item>
+        <item>Нет людей, которых я по-настоящему ненавидел бы. </item>
+        <item>Довольно много людей мне завидуют. </item>
+        <item>Даже если я злюсь, то не прибегаю к «сильным» выражениям. </item>
+        <item>Люди, увиливающие от работы, должны испытывать чувство вины. </item>
+        <item>Я редко даю сдачи, даже если кто-то ударит меня. </item>
+        <item>Я могу вспомнить случай, когда был так зол, что хватал первый попавшийся предмет и ломал его. </item>
+        <item>Я бываю грубоват по отношению к людям, которые мне не нравятся. </item>
+        <item>Когда со мной разговаривают командным тоном, мне ничего не хочется делать. </item>
+        <item>Обычно я стараюсь скрывать плохое отношение к людям. </item>
+        <item>Иногда мне кажется, что надо мной смеются. </item>
+        <item>Если кто-то раздражает меня, я готов сказать все, что я о нем думаю. </item>
+        <item>Меня угнетает то, что я мало делаю для своих родителей. </item>
+        <item>Если кто-то первым ударит меня, я не отвечу ему. </item>
+        <item>В споре я часто повышаю голос. </item>
+        <item>Я не раздражаюсь из-за мелочей. </item>
+        <item>Когда люди корчат из себя начальника, я делаю все, чтобы они не зазнавались. </item>
+        <item>Я не всегда получаю то хорошее, чего заслуживаю. </item>
+        <item>У меня нет врагов, которые хотели бы мне навредить. </item>
+        <item>Я часто угрожаю людям, хотя и не собираюсь приводить угрозы в исполнение. </item>
+        <item>Я делаю много такого, о чем впоследствии жалею. </item>
     </string-array>
 </resources>
