--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">TestForAnger</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="title_which_question">Вопрос %1$d из %2$d</string>
 
     <string-array name="string_questions">
         <item> Если я разозлюсь, то могу ударить кого-нибудь. </item>
