--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="yes">Да</string>
     <string name="no">Нет</string>
     <string name="title_which_question">Вопрос %1$d из %2$d</string>
+    <string name="start_test">Начать тест</string>
+    <string name="exit">Выход</string>
 
     <string-array name="string_questions">
         <item> Если я разозлюсь, то могу ударить кого-нибудь. </item>
