--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -6,6 +6,13 @@
     <string name="start_test">Начать тест</string>
     <string name="exit">Выход</string>
 
+
+    <string-array name="string_results">
+        <item>Вы милаха алрпопсивгшячрмишгвяылочрмиш гвялочc•ми швяочcрми шговачc авма чсшовяx ÷шсо вяашчcо шявачmсит швярxmƒсим шовьxƒ÷с мшоьвятx÷ сшовтяx÷ шсовям x÷ѕcо мявшx÷•см </item>
+        <item>Ни рыба ни мясо алрпопсивгшячрмишгвяылочрмиш гвялочc•ми швяочcрми шговачc авма чсшовяx ÷шсо вяашчcо шявачmсит швярxmƒсим шовьxƒ÷с мшоьвятx÷ сшовтяx÷ шсовям x÷ѕcо мявшx÷•см </item>
+        <item>Вы злыдень алрпопсивгшячрмишгвяылочрмиш гвялочc•ми швяочcрми шговачc авма чсшовяx ÷шсо вяашчcо шявачmсит швярxmƒсим шовьxƒ÷с мшоьвятx÷ сшовтяx÷ шсовям x÷ѕcо мявшx÷•см </item>
+    </string-array>
+
     <string-array name="string_questions">
         <item>Если я разозлюсь, то могу ударить кого-нибудь.</item>
         <item>Я никогда не раздражась настолько, чтобы кидаться предметами.</item>
