--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="no">Нет</string>
     <string name="title_which_question">Вопрос %1$d из %2$d</string>
     <string name="start_test">Начать тест</string>
+    <string name="more">Подробнее</string>
+    <string name="again">Пройти заново</string>
     <string name="exit">Выход</string>
 
 
