--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
 
 
     <string-array name="string_results">
-        <item>Вы милаха алрпопсивгшячрмишгвяылочрмиш гвялочc•ми швяочcрми шговачc авма чсшовяx ÷шсо вяашчcо шявачmсит швярxmƒсим шовьxƒ÷с мшоьвятx÷ сшовтяx÷ шсовям x÷ѕcо мявшx÷•см </item>
-        <item>Ни рыба ни мясо алрпопсивгшячрмишгвяылочрмиш гвялочc•ми швяочcрми шговачc авма чсшовяx ÷шсо вяашчcо шявачmсит швярxmƒсим шовьxƒ÷с мшоьвятx÷ сшовтяx÷ шсовям x÷ѕcо мявшx÷•см </item>
-        <item>Вы злыдень алрпопсивгшячрмишгвяылочрмиш гвялочc•ми швяочcрми шговачc авма чсшовяx ÷шсо вяашчcо шявачmсит швярxmƒсим шовьxƒ÷с мшоьвятx÷ сшовтяx÷ шсовям x÷ѕcо мявшx÷•см </item>
+        <item>Вы очень спокойны и чтобы Вас вывести нужно очень постараться, но даже у Вашего терпения есть предел :)</item>
+        <item>В целом, Вы довольно спокойны, но когда люди с завидным постоянством начинают Вас раздражать, Вы покажете им, что они сильно заблуждались, считая Вас тихоней, которая все стерпит :)</item>
+        <item>Вы дьявол во плоти. Человек, который пытается Вас выбесить, подписывает себе смертный приговор. Вы покажете ему все на что способны! И не отступите, пока не спляшете на его костях!!!</item>
     </string-array>
 
     <!--Rate App-->
