--- a/TestForAnger/app/src/main/res/values/strings.xml
+++ b/TestForAnger/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_which_question">Вопрос %1$d из %2$d</string>
     <string name="start_test">Начать тест</string>
     <string name="more">Подробнее</string>
+    <string name="repeat_test">Пройти заново</string>
     <string name="again">Пройти заново</string>
     <string name="rate">Оценить</string>
     <string name="exit">Выход</string>
